tests/fixtures/invalid/min_none_none.py
# Cannot call min() with None, None
x = min(None, None)
